<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:layout_height="75dp"
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_gravity="center"
        android:layout_alignParentTop = "true"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/creer_un_profil"
            android:textSize="12pt"
            android:textAlignment="center"
            android:textColor="@color/white"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topBar"

        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="center"

            android:textSize="15pt"
            android:text="@string/creation_d_un_compte"
            />
        <EditText
            android:id="@+id/prenom"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/prenom"
            android:drawableStart="@drawable/baseline_attach_email_24"
            android:autofillHints="" />

        <EditText
            android:layout_margin="15dp"
            android:inputType="text"
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom"
            android:drawableStart="@drawable/baseline_attach_email_24"
            android:autofillHints="" />
        <EditText
            android:layout_margin="15dp"
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:drawableStart="@drawable/baseline_attach_email_24"
            android:autofillHints="" />
        <EditText
            android:layout_margin="15dp"
            android:inputType="textPassword"
            android:id="@+id/mdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mot_de_passe"
            android:drawableStart="@drawable/baseline_attach_email_24"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/numTel"/>

            <EditText
                android:layout_margin="15dp"
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numéro_de_téléphone"
                android:inputType="phone"
                android:drawableStart="@drawable/baseline_attach_email_24"
                android:autofillHints="" />


        </LinearLayout>

        <Button
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:id="@+id/btnInsc"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/inscription"
            android:backgroundTint="@color/orange" />

        <Button
            android:layout_marginHorizontal="15dp"
            android:layout_gravity="center"
            android:id="@+id/Annuler"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/annuler"
            android:backgroundTint="@color/rouge" />



    </LinearLayout>
</RelativeLayout>


