<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_height="75dp"
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_gravity="center"
        android:layout_alignParentTop = "true"
        >

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Connectez vous"
            android:textSize="12pt"
            android:textAlignment="center"
            android:textColor="@color/white"/>

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/TitreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topBar"
        android:layout_marginTop="50dp"
        android:gravity="center"

        >
        <TextView
            android:id="@+id/Titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15pt"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:text="Bienvenue sur Jumia !"
            />


    </RelativeLayout>
    <RelativeLayout

        android:id="@+id/formLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TitreLayout"
        android:layout_marginStart="15dp"

        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/IdVous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/identifiez_vous" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/IdVous"
            android:autofillHints=""
            android:drawableStart="@drawable/baseline_attach_email_24"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/mdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:autofillHints=""
            android:drawableStart="@drawable/baseline_block_24"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/mdpOublie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mdp"
            android:gravity="left"
            android:text="@string/mot_de_passe_oubli"
            android:textColor="@color/blue"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mdpOublie"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/orange"
            android:text="@string/connectez_vous" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        >
        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:id="@+id/OptCo"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/CreeJumia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nouveau sur Jumia ?" />

            <TextView
                android:id="@+id/CreeCompte"
                android:layout_toRightOf="@+id/CreeJumia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" CREE UN COMPTE"
                android:textColor="@color/blue"
                android:textStyle="bold"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Ou"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/OptCo"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <View
                android:layout_alignParentTop = "true"

                android:id="@+id/traitG"
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/gris"/>
            <TextView
                android:id="@+id/TxtOu"
                android:layout_toRightOf="@+id/traitG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OU"
                android:textColor="@color/gris"/>
            <View
                android:id="@+id/traitD"
                android:layout_toRightOf="@+id/TxtOu"
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/gris"/>
        </RelativeLayout>
        <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/CoFB"
            android:layout_below="@+id/Ou"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_perm_contact_calendar_24"
            android:text="Facebook"
            android:textColor="@color/blue" />


    </RelativeLayout>




</RelativeLayout>